# ars_optitrack_transf

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: arena_obstacles_dynamic.yaml  arena_obstacles_static.yaml  optitrack_transf_environment.yaml
launch/: arena_environment_dynamic.launch  arena_environment_static.launch  optitrack_transf_environment_static.launch
source/: arena_environment_ros_d.py  arena_environment_ros_dynamic_node.py  ars_optitrack_transf_environment_ros.py  ars_optitrack_transf_environment_ros_node.py  ars_optitrack_transf_robot.py  ars_optitrack_transf_robot_ros.py  ars_optitrack_transf_robot_ros_node.py
source/_caca/: arena_environment_ros_s.py  arena_environment_ros_static_node.py
